header and foot test coverage done, missing home and NotFound tests

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,16 @@
   color: white;
 }
 
+.custom-nav {
+  text-align: center;
+}
+
+.custom-logo {
+  height: 150px;
+  width: auto;
+}
+
+
 .App-link {
   color: #61dafb;
 }
